[package]
name = "hartwig_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_derive2 = "0.1.18"

[dev-dependencies]
criterion = "0.4.0"
itertools = "0.10.5"

[[bench]]
name = "rps"
harness = false
